# AdaptiveCards

./: .gitignore
samples/Cortana Cards/: Cortana timer card.json  HostConfig_HC.json  Q_2.json  Q_3.json
samples/Cortana Cards/stuff/: AdaptiveCardIncorrectAcessKeyBug-simple.json  AdaptiveCardIncorrectAcessKeyBug.json
samples/v1.3/Tests/: HighContrastSelectActionCase.json
source/dotnet/Samples/WPFVisualizer/: AdaptiveCards.Sample.WPFVisualizer.csproj
source/shared/cpp/AdaptiveCardsSharedModel/AdaptiveCardsSharedModel/: AdaptiveCardsSharedModel.vcxproj  AdaptiveCardsSharedModel.vcxproj.filters
source/shared/cpp/ObjectModel/: BaseElement.h  CMakeLists.txt  HostConfig.cpp  HostConfig.h  ParseContext.h  ParseUtil.h
source/uwp/Renderer/idl/: AdaptiveCards.Rendering.Uwp.idl
source/uwp/Renderer/lib/: AdaptiveCardRendererComponent.cpp  AdaptiveColumnRenderer.cpp  AdaptiveColumnSetRenderer.cpp  AdaptiveContainerRenderer.cpp  AdaptiveRenderArgs.cpp  AdaptiveRenderArgs.h  AdaptiveRenderContext.cpp  AdaptiveRenderContext.h  AdaptiveTextBlockRenderer.cpp  DefaultResourceDictionary.h-my  ElementTagContent.h  RenderedAdaptiveCard.cpp  RenderedAdaptiveCard.h  TextHelpers.h  XamlBuilder.cpp  XamlHelpers.h
